--- a/publication/pub1/index.qmd
+++ b/publication/pub1/index.qmd
@@ -25,26 +25,64 @@ google-scholar: true
  Time series analysis of daily stock data and building predictive models are complicated. This project presents a comparative study for stock price prediction using three different methods, namely autoregressive integrated moving average, artificial neural network, and stochastic process-geometric Brownian motion. Each of the methods is used to build predictive models using historical stock data collected from Yahoo Finance. Finally, output from each of the models is compared to the actual stock price. Empirical results show that the conventional statistical model and the stochastic model provide better approximation for next-day stock price prediction compared to the neural network model.
 </p>  
 
-Download a pdf from [here](/publication/pub1/paper1.pdf)  
+```{=html}
+<div class="text-center">
+    <a class="pdf-button" href="/publication/pub1/paper1.pdf" target="_blank">
+        <img src="/_assets/images/pdf1.png" alt="Download a PDF">
+    </a>
+    <a class="mdpi-button" href="https://www.mdpi.com/1911-8074/13/8/181" target="_blank">
+        <img src="/_assets/images/mdpi.png" alt="MDPI Journal">
+    </a>
+</div>
+```
+
+---
 
 **Share on**  
 
+::::{.columns}
+:::{.column width="33%"}
+<a href="https://www.facebook.com/sharer.php?u=https://mrislambd.github.io/publication/pub1/" target="_blank" style="color:#1877F2; text-decoration: none;">
+ 
+{{< fa brands facebook size=3x >}}
+</a>
+ 
+:::
+ 
+:::{.column width="33%"}
+<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://mrislambd.github.io/publication/pub1/" target="_blank" style="color:#0077B5; text-decoration: none;">
+ 
+{{< fa brands linkedin size=3x >}}
+</a>
+ 
+:::
+ 
+:::{.column width="33%"}
+<a href="https://www.twitter.com/intent/tweet?url=https://mrislambd.github.io/publication/pub1/" target="_blank" style="color:#1DA1F2; text-decoration: none;">
+ 
+{{< fa brands twitter size=3x >}}
+</a>
+ 
+:::
+::::
+ 
+<script src="https://giscus.app/client.js"
+        data-repo="mrislambd/mrislambd.github.io" 
+        data-repo-id="R_kgDOMV8crA"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOMV8crM4CjbQW"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="light"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>
+ 
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous"
  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
- 
-<div class="share-buttons">
-<div class="fb-share-button" data-href="https://mrislambd.github.io/publication/pub1/"
-data-layout="button_count" data-size="small"><a target="_blank" 
- href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fpublication%2Fpub1%2F&amp;src=sdkpreparse" 
- class="fb-xfbml-parse-ignore">Share</a></div>
-
-<script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
-<script type="IN/Share" data-url="https://mrislambd.github.io/publication/pub1/"></script> 
- 
-<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" 
- data-url="https://mrislambd.github.io/publication/pub1/" data-show-count="true">Tweet</a>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</div>
-
-
+<div class="fb-comments" data-href="https://mrislambd.github.io/publication/pub1/" data-width="750" data-numposts="5"></div>
